[package]
name = "prompt-store"
version = "0.1.0"
edition = "2021"
authors = ["Tristan Granier <graniet75@gmail.com>"]
description = "A secure, encrypted CLI tool for managing and organizing prompts with tags, variables, and search capabilities"
license = "MIT"
repository = "https://github.com/graniet/prompt-store"
homepage = "https://github.com/graniet/prompt-store"
readme = "README.md"
keywords = ["cli", "prompt", "encryption", "security", "management"]
categories = ["command-line-utilities", "cryptography"]
exclude = [
    "target/*",
    ".git/*",
    "*.log",
    "Cargo.lock"
]

[[bin]]
name = "prompt-store"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
aes-gcm   = "0.10"
argon2    = "0.5"
base64    = "0.22.1"
clap      = { version = "4.5", features = ["derive"] }
chrono    = { version = "0.4.41" }
console   = "0.16.0"
copypasta = "0.10"
dialoguer = "0.11"
rand      = "0.8"
regex     = "1.10"
serde     = { version = "1.0", features = ["derive"] }
serde_json= "1.0"
thiserror = "1.0"
futures   = "0.3"
shell-words = "1.1.0"
llm = { git = "https://github.com/graniet/llm.git", features = ["full"] }